parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> reglas main reglas
Rule 2     reglas -> <empty>
Rule 3     reglas -> reglas main
Rule 4     reglas -> reglas unaregla
Rule 5     main -> nombremain = elemento
Rule 6     nombremain -> $
Rule 7     nombremain -> $ .
Rule 8     unaregla -> nombreregla = elemento
Rule 9     nombreregla -> REGLA
Rule 10    nombreregla -> REGLA .
Rule 11    elemento -> elemento | elementoand
Rule 12    elemento -> elementoand
Rule 13    elementoand -> elementoand & elementobase
Rule 14    elementoand -> elementobase
Rule 15    elementobase -> prim
Rule 16    elementobase -> elementobase : trans
Rule 17    elementobase -> [ elemento ]
Rule 18    elementobase -> elementobase ^ numero
Rule 19    elementobase -> < elemento >
Rule 20    elementobase -> nombreregla
Rule 21    elementobase -> nombremain
Rule 22    prim -> BALL
Rule 23    prim -> BOX
Rule 24    prim -> NADA
Rule 25    trans -> RX numero
Rule 26    trans -> RY numero
Rule 27    trans -> RZ numero
Rule 28    trans -> S numero
Rule 29    trans -> SX numero
Rule 30    trans -> SY numero
Rule 31    trans -> SZ numero
Rule 32    trans -> TX numero
Rule 33    trans -> TY numero
Rule 34    trans -> TZ numero
Rule 35    trans -> CR numero
Rule 36    trans -> CG numero
Rule 37    trans -> CB numero
Rule 38    trans -> D numero
Rule 39    numero -> numero + factor
Rule 40    numero -> numero - factor
Rule 41    factor -> factor * termino
Rule 42    factor -> factor / termino
Rule 43    numero -> factor
Rule 44    factor -> termino
Rule 45    termino -> NUM
Rule 46    termino -> + NUM
Rule 47    termino -> ( numero )
Rule 48    termino -> + ( numero )
Rule 49    termino -> - ( numero )

Terminals, with rules where they appear

$                    : 6 7
&                    : 13
(                    : 47 48 49
)                    : 47 48 49
*                    : 41
+                    : 39 46 48
-                    : 40 49
.                    : 7 10
/                    : 42
:                    : 16
<                    : 19
=                    : 5 8
>                    : 19
BALL                 : 22
BOX                  : 23
CB                   : 37
CG                   : 36
CR                   : 35
D                    : 38
NADA                 : 24
NUM                  : 45 46
REGLA                : 9 10
RX                   : 25
RY                   : 26
RZ                   : 27
S                    : 28
SX                   : 29
SY                   : 30
SZ                   : 31
TX                   : 32
TY                   : 33
TZ                   : 34
[                    : 17
]                    : 17
^                    : 18
error                : 
|                    : 11

Nonterminals, with rules where they appear

elemento             : 5 8 11 17 19
elementoand          : 11 12 13
elementobase         : 13 14 16 18
factor               : 39 40 41 42 43
main                 : 1 3
nombremain           : 5 21
nombreregla          : 8 20
numero               : 18 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 47 48 49
prim                 : 15
programa             : 0
reglas               : 1 1 3 4
termino              : 41 42 44
trans                : 16
unaregla             : 4

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . reglas main reglas
    (2) reglas -> .
    (3) reglas -> . reglas main
    (4) reglas -> . reglas unaregla

    $               reduce using rule 2 (reglas -> .)
    REGLA           reduce using rule 2 (reglas -> .)

    reglas                         shift and go to state 1
    programa                       shift and go to state 2

state 1

    (1) programa -> reglas . main reglas
    (3) reglas -> reglas . main
    (4) reglas -> reglas . unaregla
    (5) main -> . nombremain = elemento
    (8) unaregla -> . nombreregla = elemento
    (6) nombremain -> . $
    (7) nombremain -> . $ .
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .

    $               shift and go to state 4
    REGLA           shift and go to state 5

    unaregla                       shift and go to state 3
    nombremain                     shift and go to state 6
    nombreregla                    shift and go to state 7
    main                           shift and go to state 8

state 2

    (0) S' -> programa .



state 3

    (4) reglas -> reglas unaregla .

    $               reduce using rule 4 (reglas -> reglas unaregla .)
    REGLA           reduce using rule 4 (reglas -> reglas unaregla .)
    $end            reduce using rule 4 (reglas -> reglas unaregla .)


state 4

    (6) nombremain -> $ .
    (7) nombremain -> $ . .

    :               reduce using rule 6 (nombremain -> $ .)
    ^               reduce using rule 6 (nombremain -> $ .)
    &               reduce using rule 6 (nombremain -> $ .)
    |               reduce using rule 6 (nombremain -> $ .)
    $               reduce using rule 6 (nombremain -> $ .)
    REGLA           reduce using rule 6 (nombremain -> $ .)
    $end            reduce using rule 6 (nombremain -> $ .)
    >               reduce using rule 6 (nombremain -> $ .)
    ]               reduce using rule 6 (nombremain -> $ .)
    =               reduce using rule 6 (nombremain -> $ .)
    .               shift and go to state 9


state 5

    (9) nombreregla -> REGLA .
    (10) nombreregla -> REGLA . .

    :               reduce using rule 9 (nombreregla -> REGLA .)
    ^               reduce using rule 9 (nombreregla -> REGLA .)
    &               reduce using rule 9 (nombreregla -> REGLA .)
    ]               reduce using rule 9 (nombreregla -> REGLA .)
    |               reduce using rule 9 (nombreregla -> REGLA .)
    >               reduce using rule 9 (nombreregla -> REGLA .)
    $               reduce using rule 9 (nombreregla -> REGLA .)
    REGLA           reduce using rule 9 (nombreregla -> REGLA .)
    $end            reduce using rule 9 (nombreregla -> REGLA .)
    =               reduce using rule 9 (nombreregla -> REGLA .)
    .               shift and go to state 10


state 6

    (5) main -> nombremain . = elemento

    =               shift and go to state 11


state 7

    (8) unaregla -> nombreregla . = elemento

    =               shift and go to state 12


state 8

    (1) programa -> reglas main . reglas
    (3) reglas -> reglas main .
    (2) reglas -> .
    (3) reglas -> . reglas main
    (4) reglas -> . reglas unaregla

  ! reduce/reduce conflict for $ resolved using rule 2 (reglas -> .)
  ! reduce/reduce conflict for REGLA resolved using rule 2 (reglas -> .)
    $               reduce using rule 2 (reglas -> .)
    REGLA           reduce using rule 2 (reglas -> .)
    $end            reduce using rule 2 (reglas -> .)

  ! $               [ reduce using rule 3 (reglas -> reglas main .) ]
  ! REGLA           [ reduce using rule 3 (reglas -> reglas main .) ]

    reglas                         shift and go to state 13

state 9

    (7) nombremain -> $ . .

    :               reduce using rule 7 (nombremain -> $ . .)
    ^               reduce using rule 7 (nombremain -> $ . .)
    &               reduce using rule 7 (nombremain -> $ . .)
    |               reduce using rule 7 (nombremain -> $ . .)
    $               reduce using rule 7 (nombremain -> $ . .)
    REGLA           reduce using rule 7 (nombremain -> $ . .)
    $end            reduce using rule 7 (nombremain -> $ . .)
    >               reduce using rule 7 (nombremain -> $ . .)
    ]               reduce using rule 7 (nombremain -> $ . .)
    =               reduce using rule 7 (nombremain -> $ . .)


state 10

    (10) nombreregla -> REGLA . .

    :               reduce using rule 10 (nombreregla -> REGLA . .)
    ^               reduce using rule 10 (nombreregla -> REGLA . .)
    &               reduce using rule 10 (nombreregla -> REGLA . .)
    ]               reduce using rule 10 (nombreregla -> REGLA . .)
    |               reduce using rule 10 (nombreregla -> REGLA . .)
    >               reduce using rule 10 (nombreregla -> REGLA . .)
    $               reduce using rule 10 (nombreregla -> REGLA . .)
    REGLA           reduce using rule 10 (nombreregla -> REGLA . .)
    $end            reduce using rule 10 (nombreregla -> REGLA . .)
    =               reduce using rule 10 (nombreregla -> REGLA . .)


state 11

    (5) main -> nombremain = . elemento
    (11) elemento -> . elemento | elementoand
    (12) elemento -> . elementoand
    (13) elementoand -> . elementoand & elementobase
    (14) elementoand -> . elementobase
    (15) elementobase -> . prim
    (16) elementobase -> . elementobase : trans
    (17) elementobase -> . [ elemento ]
    (18) elementobase -> . elementobase ^ numero
    (19) elementobase -> . < elemento >
    (20) elementobase -> . nombreregla
    (21) elementobase -> . nombremain
    (22) prim -> . BALL
    (23) prim -> . BOX
    (24) prim -> . NADA
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .
    (6) nombremain -> . $
    (7) nombremain -> . $ .

    [               shift and go to state 21
    <               shift and go to state 18
    BALL            shift and go to state 19
    BOX             shift and go to state 14
    NADA            shift and go to state 16
    REGLA           shift and go to state 5
    $               shift and go to state 4

    elementobase                   shift and go to state 15
    elementoand                    shift and go to state 23
    nombremain                     shift and go to state 24
    nombreregla                    shift and go to state 20
    prim                           shift and go to state 17
    elemento                       shift and go to state 22

state 12

    (8) unaregla -> nombreregla = . elemento
    (11) elemento -> . elemento | elementoand
    (12) elemento -> . elementoand
    (13) elementoand -> . elementoand & elementobase
    (14) elementoand -> . elementobase
    (15) elementobase -> . prim
    (16) elementobase -> . elementobase : trans
    (17) elementobase -> . [ elemento ]
    (18) elementobase -> . elementobase ^ numero
    (19) elementobase -> . < elemento >
    (20) elementobase -> . nombreregla
    (21) elementobase -> . nombremain
    (22) prim -> . BALL
    (23) prim -> . BOX
    (24) prim -> . NADA
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .
    (6) nombremain -> . $
    (7) nombremain -> . $ .

    [               shift and go to state 21
    <               shift and go to state 18
    BALL            shift and go to state 19
    BOX             shift and go to state 14
    NADA            shift and go to state 16
    REGLA           shift and go to state 5
    $               shift and go to state 4

    elementobase                   shift and go to state 15
    elementoand                    shift and go to state 23
    nombremain                     shift and go to state 24
    nombreregla                    shift and go to state 20
    prim                           shift and go to state 17
    elemento                       shift and go to state 25

state 13

    (1) programa -> reglas main reglas .
    (3) reglas -> reglas . main
    (4) reglas -> reglas . unaregla
    (5) main -> . nombremain = elemento
    (8) unaregla -> . nombreregla = elemento
    (6) nombremain -> . $
    (7) nombremain -> . $ .
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .

    $end            reduce using rule 1 (programa -> reglas main reglas .)
    $               shift and go to state 4
    REGLA           shift and go to state 5

    unaregla                       shift and go to state 3
    nombremain                     shift and go to state 6
    nombreregla                    shift and go to state 7
    main                           shift and go to state 26

state 14

    (23) prim -> BOX .

    :               reduce using rule 23 (prim -> BOX .)
    ^               reduce using rule 23 (prim -> BOX .)
    &               reduce using rule 23 (prim -> BOX .)
    >               reduce using rule 23 (prim -> BOX .)
    |               reduce using rule 23 (prim -> BOX .)
    $               reduce using rule 23 (prim -> BOX .)
    REGLA           reduce using rule 23 (prim -> BOX .)
    $end            reduce using rule 23 (prim -> BOX .)
    ]               reduce using rule 23 (prim -> BOX .)


state 15

    (14) elementoand -> elementobase .
    (16) elementobase -> elementobase . : trans
    (18) elementobase -> elementobase . ^ numero

    &               reduce using rule 14 (elementoand -> elementobase .)
    |               reduce using rule 14 (elementoand -> elementobase .)
    $               reduce using rule 14 (elementoand -> elementobase .)
    REGLA           reduce using rule 14 (elementoand -> elementobase .)
    $end            reduce using rule 14 (elementoand -> elementobase .)
    >               reduce using rule 14 (elementoand -> elementobase .)
    ]               reduce using rule 14 (elementoand -> elementobase .)
    :               shift and go to state 27
    ^               shift and go to state 28


state 16

    (24) prim -> NADA .

    :               reduce using rule 24 (prim -> NADA .)
    ^               reduce using rule 24 (prim -> NADA .)
    &               reduce using rule 24 (prim -> NADA .)
    >               reduce using rule 24 (prim -> NADA .)
    |               reduce using rule 24 (prim -> NADA .)
    $               reduce using rule 24 (prim -> NADA .)
    REGLA           reduce using rule 24 (prim -> NADA .)
    $end            reduce using rule 24 (prim -> NADA .)
    ]               reduce using rule 24 (prim -> NADA .)


state 17

    (15) elementobase -> prim .

    :               reduce using rule 15 (elementobase -> prim .)
    ^               reduce using rule 15 (elementobase -> prim .)
    &               reduce using rule 15 (elementobase -> prim .)
    |               reduce using rule 15 (elementobase -> prim .)
    $               reduce using rule 15 (elementobase -> prim .)
    REGLA           reduce using rule 15 (elementobase -> prim .)
    $end            reduce using rule 15 (elementobase -> prim .)
    >               reduce using rule 15 (elementobase -> prim .)
    ]               reduce using rule 15 (elementobase -> prim .)


state 18

    (19) elementobase -> < . elemento >
    (11) elemento -> . elemento | elementoand
    (12) elemento -> . elementoand
    (13) elementoand -> . elementoand & elementobase
    (14) elementoand -> . elementobase
    (15) elementobase -> . prim
    (16) elementobase -> . elementobase : trans
    (17) elementobase -> . [ elemento ]
    (18) elementobase -> . elementobase ^ numero
    (19) elementobase -> . < elemento >
    (20) elementobase -> . nombreregla
    (21) elementobase -> . nombremain
    (22) prim -> . BALL
    (23) prim -> . BOX
    (24) prim -> . NADA
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .
    (6) nombremain -> . $
    (7) nombremain -> . $ .

    [               shift and go to state 21
    <               shift and go to state 18
    BALL            shift and go to state 19
    BOX             shift and go to state 14
    NADA            shift and go to state 16
    REGLA           shift and go to state 5
    $               shift and go to state 4

    elementobase                   shift and go to state 15
    elementoand                    shift and go to state 23
    nombremain                     shift and go to state 24
    nombreregla                    shift and go to state 20
    prim                           shift and go to state 17
    elemento                       shift and go to state 29

state 19

    (22) prim -> BALL .

    :               reduce using rule 22 (prim -> BALL .)
    ^               reduce using rule 22 (prim -> BALL .)
    &               reduce using rule 22 (prim -> BALL .)
    >               reduce using rule 22 (prim -> BALL .)
    |               reduce using rule 22 (prim -> BALL .)
    $               reduce using rule 22 (prim -> BALL .)
    REGLA           reduce using rule 22 (prim -> BALL .)
    $end            reduce using rule 22 (prim -> BALL .)
    ]               reduce using rule 22 (prim -> BALL .)


state 20

    (20) elementobase -> nombreregla .

    :               reduce using rule 20 (elementobase -> nombreregla .)
    ^               reduce using rule 20 (elementobase -> nombreregla .)
    &               reduce using rule 20 (elementobase -> nombreregla .)
    |               reduce using rule 20 (elementobase -> nombreregla .)
    $               reduce using rule 20 (elementobase -> nombreregla .)
    REGLA           reduce using rule 20 (elementobase -> nombreregla .)
    $end            reduce using rule 20 (elementobase -> nombreregla .)
    >               reduce using rule 20 (elementobase -> nombreregla .)
    ]               reduce using rule 20 (elementobase -> nombreregla .)


state 21

    (17) elementobase -> [ . elemento ]
    (11) elemento -> . elemento | elementoand
    (12) elemento -> . elementoand
    (13) elementoand -> . elementoand & elementobase
    (14) elementoand -> . elementobase
    (15) elementobase -> . prim
    (16) elementobase -> . elementobase : trans
    (17) elementobase -> . [ elemento ]
    (18) elementobase -> . elementobase ^ numero
    (19) elementobase -> . < elemento >
    (20) elementobase -> . nombreregla
    (21) elementobase -> . nombremain
    (22) prim -> . BALL
    (23) prim -> . BOX
    (24) prim -> . NADA
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .
    (6) nombremain -> . $
    (7) nombremain -> . $ .

    [               shift and go to state 21
    <               shift and go to state 18
    BALL            shift and go to state 19
    BOX             shift and go to state 14
    NADA            shift and go to state 16
    REGLA           shift and go to state 5
    $               shift and go to state 4

    elementobase                   shift and go to state 15
    elementoand                    shift and go to state 23
    nombremain                     shift and go to state 24
    nombreregla                    shift and go to state 20
    prim                           shift and go to state 17
    elemento                       shift and go to state 30

state 22

    (5) main -> nombremain = elemento .
    (11) elemento -> elemento . | elementoand

    $               reduce using rule 5 (main -> nombremain = elemento .)
    REGLA           reduce using rule 5 (main -> nombremain = elemento .)
    $end            reduce using rule 5 (main -> nombremain = elemento .)
    |               shift and go to state 31


state 23

    (12) elemento -> elementoand .
    (13) elementoand -> elementoand . & elementobase

    |               reduce using rule 12 (elemento -> elementoand .)
    $               reduce using rule 12 (elemento -> elementoand .)
    REGLA           reduce using rule 12 (elemento -> elementoand .)
    $end            reduce using rule 12 (elemento -> elementoand .)
    >               reduce using rule 12 (elemento -> elementoand .)
    ]               reduce using rule 12 (elemento -> elementoand .)
    &               shift and go to state 32


state 24

    (21) elementobase -> nombremain .

    :               reduce using rule 21 (elementobase -> nombremain .)
    ^               reduce using rule 21 (elementobase -> nombremain .)
    &               reduce using rule 21 (elementobase -> nombremain .)
    |               reduce using rule 21 (elementobase -> nombremain .)
    $               reduce using rule 21 (elementobase -> nombremain .)
    REGLA           reduce using rule 21 (elementobase -> nombremain .)
    $end            reduce using rule 21 (elementobase -> nombremain .)
    >               reduce using rule 21 (elementobase -> nombremain .)
    ]               reduce using rule 21 (elementobase -> nombremain .)


state 25

    (8) unaregla -> nombreregla = elemento .
    (11) elemento -> elemento . | elementoand

    $               reduce using rule 8 (unaregla -> nombreregla = elemento .)
    REGLA           reduce using rule 8 (unaregla -> nombreregla = elemento .)
    $end            reduce using rule 8 (unaregla -> nombreregla = elemento .)
    |               shift and go to state 31


state 26

    (3) reglas -> reglas main .

    $               reduce using rule 3 (reglas -> reglas main .)
    REGLA           reduce using rule 3 (reglas -> reglas main .)
    $end            reduce using rule 3 (reglas -> reglas main .)


state 27

    (16) elementobase -> elementobase : . trans
    (25) trans -> . RX numero
    (26) trans -> . RY numero
    (27) trans -> . RZ numero
    (28) trans -> . S numero
    (29) trans -> . SX numero
    (30) trans -> . SY numero
    (31) trans -> . SZ numero
    (32) trans -> . TX numero
    (33) trans -> . TY numero
    (34) trans -> . TZ numero
    (35) trans -> . CR numero
    (36) trans -> . CG numero
    (37) trans -> . CB numero
    (38) trans -> . D numero

    RX              shift and go to state 39
    RY              shift and go to state 40
    RZ              shift and go to state 43
    S               shift and go to state 41
    SX              shift and go to state 42
    SY              shift and go to state 34
    SZ              shift and go to state 33
    TX              shift and go to state 36
    TY              shift and go to state 37
    TZ              shift and go to state 45
    CR              shift and go to state 44
    CG              shift and go to state 38
    CB              shift and go to state 47
    D               shift and go to state 35

    trans                          shift and go to state 46

state 28

    (18) elementobase -> elementobase ^ . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 51
    factor                         shift and go to state 54

state 29

    (19) elementobase -> < elemento . >
    (11) elemento -> elemento . | elementoand

    >               shift and go to state 55
    |               shift and go to state 31


state 30

    (17) elementobase -> [ elemento . ]
    (11) elemento -> elemento . | elementoand

    ]               shift and go to state 56
    |               shift and go to state 31


state 31

    (11) elemento -> elemento | . elementoand
    (13) elementoand -> . elementoand & elementobase
    (14) elementoand -> . elementobase
    (15) elementobase -> . prim
    (16) elementobase -> . elementobase : trans
    (17) elementobase -> . [ elemento ]
    (18) elementobase -> . elementobase ^ numero
    (19) elementobase -> . < elemento >
    (20) elementobase -> . nombreregla
    (21) elementobase -> . nombremain
    (22) prim -> . BALL
    (23) prim -> . BOX
    (24) prim -> . NADA
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .
    (6) nombremain -> . $
    (7) nombremain -> . $ .

    [               shift and go to state 21
    <               shift and go to state 18
    BALL            shift and go to state 19
    BOX             shift and go to state 14
    NADA            shift and go to state 16
    REGLA           shift and go to state 5
    $               shift and go to state 4

    elementobase                   shift and go to state 15
    elementoand                    shift and go to state 57
    nombremain                     shift and go to state 24
    nombreregla                    shift and go to state 20
    prim                           shift and go to state 17

state 32

    (13) elementoand -> elementoand & . elementobase
    (15) elementobase -> . prim
    (16) elementobase -> . elementobase : trans
    (17) elementobase -> . [ elemento ]
    (18) elementobase -> . elementobase ^ numero
    (19) elementobase -> . < elemento >
    (20) elementobase -> . nombreregla
    (21) elementobase -> . nombremain
    (22) prim -> . BALL
    (23) prim -> . BOX
    (24) prim -> . NADA
    (9) nombreregla -> . REGLA
    (10) nombreregla -> . REGLA .
    (6) nombremain -> . $
    (7) nombremain -> . $ .

    [               shift and go to state 21
    <               shift and go to state 18
    BALL            shift and go to state 19
    BOX             shift and go to state 14
    NADA            shift and go to state 16
    REGLA           shift and go to state 5
    $               shift and go to state 4

    elementobase                   shift and go to state 58
    nombremain                     shift and go to state 24
    nombreregla                    shift and go to state 20
    prim                           shift and go to state 17

state 33

    (31) trans -> SZ . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 59
    factor                         shift and go to state 54

state 34

    (30) trans -> SY . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 60
    factor                         shift and go to state 54

state 35

    (38) trans -> D . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 61
    factor                         shift and go to state 54

state 36

    (32) trans -> TX . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 62
    factor                         shift and go to state 54

state 37

    (33) trans -> TY . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 63
    factor                         shift and go to state 54

state 38

    (36) trans -> CG . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 64
    factor                         shift and go to state 54

state 39

    (25) trans -> RX . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 65
    factor                         shift and go to state 54

state 40

    (26) trans -> RY . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 66
    factor                         shift and go to state 54

state 41

    (28) trans -> S . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 67
    factor                         shift and go to state 54

state 42

    (29) trans -> SX . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 68
    factor                         shift and go to state 54

state 43

    (27) trans -> RZ . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 69
    factor                         shift and go to state 54

state 44

    (35) trans -> CR . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 70
    factor                         shift and go to state 54

state 45

    (34) trans -> TZ . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 71
    factor                         shift and go to state 54

state 46

    (16) elementobase -> elementobase : trans .

    :               reduce using rule 16 (elementobase -> elementobase : trans .)
    ^               reduce using rule 16 (elementobase -> elementobase : trans .)
    &               reduce using rule 16 (elementobase -> elementobase : trans .)
    |               reduce using rule 16 (elementobase -> elementobase : trans .)
    $               reduce using rule 16 (elementobase -> elementobase : trans .)
    REGLA           reduce using rule 16 (elementobase -> elementobase : trans .)
    $end            reduce using rule 16 (elementobase -> elementobase : trans .)
    >               reduce using rule 16 (elementobase -> elementobase : trans .)
    ]               reduce using rule 16 (elementobase -> elementobase : trans .)


state 47

    (37) trans -> CB . numero
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 72
    factor                         shift and go to state 54

state 48

    (47) termino -> ( . numero )
    (39) numero -> . numero + factor
    (40) numero -> . numero - factor
    (43) numero -> . factor
    (41) factor -> . factor * termino
    (42) factor -> . factor / termino
    (44) factor -> . termino
    (45) termino -> . NUM
    (46) termino -> . + NUM
    (47) termino -> . ( numero )
    (48) termino -> . + ( numero )
    (49) termino -> . - ( numero )

    NUM             shift and go to state 52
    +               shift and go to state 49
    (               shift and go to state 48
    -               shift and go to state 50

    termino                        shift and go to state 53
    numero                         shift and go to state 73
    factor                         shift and go to state 54

state 49

    (46) termino -> + . NUM
    (48) termino -> + . ( numero )

    NUM             shift and go to state 75
    (               shift and go to state 74


state 50

    (49) termino -> - . ( numero )

    (               shift and go to state 76


state 51

    (18) elementobase -> elementobase ^ numero .
    (39) numero -> numero . + factor
    (40) numero -> numero . - factor

    :               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    ^               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    &               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    |               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    $               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    REGLA           reduce using rule 18 (elementobase -> elementobase ^ numero .)
    $end            reduce using rule 18 (elementobase -> elementobase ^ numero .)
    >               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    ]               reduce using rule 18 (elementobase -> elementobase ^ numero .)
    +               shift and go to state 77
    -               shift and go to state 78


state 52

    (45) termino -> NUM .
